# kubernetes-docker-autonomous-trading-agent

./: .env.example  .gitignore  Dockerfile  README.md  checkbalance.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yaml
core/: agent.py  config.py  memory.py  network_config.py  policy_engine.py  sandbox.py
docs/: MAINNET_SETUP.md
k8s/: cronjob.yaml  selenium.yaml
memory/: state.json
policies/: default_policies.py
scripts/: backtest_reason.py
tests/: test_agent_swap_and_reflect.py  test_binance_tool.py  test_browser_tool.py  test_config.py  test_fs_tool.py  test_history_tool.py  test_memory.py  test_onchain_tool.py  test_policy_engine.py  test_position_tool.py  test_sandbox.py  test_sentiment_tool.py  test_swap_tool.py  test_ta_tool.py  test_wallet_tool.py
tools/: binance_tool.py  browser_tool.py  coingecko_tool.py  emergency_withdraw.py  fs_tool.py  funding_tool.py  git_tool.py  history_tool.py  onchain_tool.py  position_tool.py  sentiment_tool.py  swap_tool.py  ta_tool.py  token_utils.py  wallet_tool.py  whale_tool.py
